<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/please_fill_your_corresponding_details"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/fullNameText"
        style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox.Dense"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/nicNoText"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="242dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/nic_no"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/dobText"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/birthday"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnPersonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dobText"
        android:layout_marginStart="15dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button_background"
        android:paddingStart="5dp"
        android:text="@string/next"
        android:textColor="@android:color/white" />

</RelativeLayout>
